src/components/Collapse/Collapse.css
.collapse {
    max-width: 1240px;
    width: 100%;
    margin: 31px 0;
}

.collapse__button {
    position: relative;
    z-index: 1;
    width: 100%;
    height: 47px;
    background: #FF6060;
    border-radius: 5px;
    border: none;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 33px 0 18px;
    font-size: 24px;
    color: #FFFFFF;
    cursor: pointer;
}

.collapse__arrow {
    transform: rotate(180deg);
    pointer-events: none;
}

.collapse__content {
    color: #FF6060;
}

.collapse__information {
    list-style: none;
    padding: 0;
    background-color: #F6F6F6;
    padding: 36px 18px 19px;
    border-radius: 5px;
    margin-top: -10px;
    font-weight: 400;
    font-size: 24px;
    height: 100%;
}

.collapse__arrow.true {
    transform: rotate(360deg);
}

@media screen and (max-width: 628px) {
    .collapse {
        margin: 20px 0 0;
    }
    .collapse__button {
        height: 30px;
        padding: 0 7px 0 12px;
        font-size: 13px;
    }
    .collapse__arrow {
        width: 15px;
    }
    .collapse__information {
        font-size: 12px;
        padding: 23px 7px 52px 11px;
    }
}

